Configure CI/CD and fix compilation bug for payment-paypal service